tests/error/u64_i64_let.vow
// TEST: stderr "let binding type mismatch"
// TEST: error-code TypeMismatch
// A genuine (non-literal) i64 value — here `Vec::len()` — must not silently
// coerce to u64 at a `let` binding. Only the unsuffixed-literal marker coerces.
module U64I64Let

fn main() -> i32 {
  let v: Vec<u64> = Vec::new();
  let n: u64 = v.len();
  0
}
